--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.17",
   "description": "An implementation of the @eventstore/db-client for the Nestjs framework and working in cooperation with the built-in Nestjs CQRS infrastructure.",
   "main": "lib/index.js",
-  "types": "lib/**/*.d.ts",
+  "types": "index.ts",
   "scripts": {
     "test": "jest --config jestconfig.json --passWithNoTests",
     "build": "tsc",
@@ -46,15 +46,14 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@eventstore/db-client": "1.1.0",
-    "@grpc/grpc-js": "1.2.12",
-    "@nestjs/common": "7.6.15",
-    "@nestjs/core": "7.6.15",
-    "@nestjs/cqrs": "7.0.1",
-    "@types/debug": "4.1.5",
-    "guid-typescript": "1.0.9",
-    "reflect-metadata": "0.1.13",
-    "rxjs": "6.6.7"
+    "@eventstore/db-client": "^6.1.0",
+    "@grpc/grpc-js": "^1.9.13",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/cqrs": "^10.2.6",
+    "guid-typescript": "^1.0.9",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1"
   },
   "files": [
     "lib/**/*"
