--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.17",
   "description": "An implementation of the @eventstore/db-client for the Nestjs framework and working in cooperation with the built-in Nestjs CQRS infrastructure.",
   "main": "lib/index.js",
-  "types": "index.ts",
+  "types": "lib/**/*.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json --passWithNoTests",
     "build": "tsc",
